--- a/kustom-webapp/base/deployment.yaml
+++ b/kustom-webapp/base/deployment.yaml
@@ -4,6 +4,9 @@ metadata:
   name: mywebapp
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: mywebapp
   template:
     spec: # Pod spec
       containers:
